Reverting previous commit for now.
Smaller screen sizes would suffer from the added margin. I’m gonna
leave this for now.

--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -39,7 +39,7 @@ h2 {
   padding-right: 10px;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+  text-align: justify;
 }
 
 .getting-started-font{
@@ -170,6 +170,7 @@ body {
 .inner {
   padding: 10px 15px 10px 15px;
 }
+
 
 /*
  * Header
