--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -16,17 +16,17 @@
             </div>
             <div class="tab-content">
                 <div class="tab-pane active" id="home">
-                    <div class="inner" style="margin-top:100px;">
+                    <div class="inner">
                         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
-<!--                         <p class="how-it-works">Our mission here at beLocal:<br> To connect you with locally sourced food.</p> -->
+                        <p class="how-it-works">Our mission here at beLocal:<br> To connect you with locally sourced food.</p>
                         <div align="center" class="content-container"><br>
                             <p>
                                 Start tapping into Victoria’s rich local food scene by supporting farmers and foodmakers who are dedicated to producing the highest quality products using sustainable techniques. Join the beLocal community today to start exploring the freshest locally produced food available in your neighbourhood.
                             </p>
                         </div>
-                        <br>
+                        <br><br>
                         <p class="getting-started-font">To begin browsing without creating an account, click Get Started below.</p>
-                        <class style="font-size: 15px;">(or click on the links above to register as either a Foodie or Local Farmer/Foodmaker)</class>
+                        <class style="font-size: 15px;">(or click on the links above to register as either a Foodie or Local Farmer)</class>
                         <br><br><br>
                             <a ng-click="getStarted()" class="btn btn-lg beLocal-btn-filled">Get Started</a>
 
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="tab-pane" id="customers">
-                    <div class="inner" style="margin-top:75px;">
+                    <div class="inner">
                         <h1 class="cover-heading">For Local Foodies</h1>
                         <span>
                             <p class="how-it-works">Interested in shopping locally? <br>Here's how beLocal works...</p>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="tab-pane" id="vendors">
-                    <div class="inner" style="margin-top:75px;">
+                    <div class="inner">
                         <h1 class="cover-heading">For Farmers & Foodmakers</h1>
                         <span>
                             <p class="how-it-works">Want to increase your presence within the community? <br>Here's how belocal can help you...</p>
