Added xs navbar when scrolling past our large nav
This required a tiny bit of JQuery hacking to get Bootstrap and ng-hide
to play nicely together.

--- a/src/client/app/views/marketdetails.html
+++ b/src/client/app/views/marketdetails.html
@@ -1,6 +1,6 @@
 <!-- NAVBAR -->
 <div class="hidden-xs"><nav-bar></nav-bar></div>
-<div class="visible-xs"><navbar-x-s></navbar-x-s></div>
+<div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
 
 <!-- SELLER DETAILS -->
 <div class="customer-container">  
