--- a/src/client/app/views/search.html
+++ b/src/client/app/views/search.html
@@ -1,5 +1,5 @@
 <div class="hidden-xs"><nav-bar></nav-bar></div>
-<div class="visible-xs"><navbar-x-s></navbar-x-s></div>
+<div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
 
 <div class="customer-container">
     <div ng-show="productResults.length == 0 && marketResults.length == 0 && vendorResults.length == 0" class="row">
