--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -92,7 +92,7 @@
                                 <div class="col-md-4">
                                     <h2 class="numberCircle">3</h2>
                                     <h2>Stay Connected</h2>
-                                    <p>Quickly share your latest updates, selling locations, and products on your prexisting social media accounts.</p>
+                                    <p>Quickly share your latest updates, selling locations, and products on your pre-existing social media accounts.</p>
                                     <br>
                                 </div>
                             </div>
