Fixed padding on vendor details apge

--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -3,7 +3,7 @@
 <div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
 
 <!-- SELLER DETAILS -->
-<div class=" new-formatting-container customer-container3">  
+<div class=" new-formatting-container customer-container">  
     <div class="row vendor-profile-header">
         <div class="col-md-5 new-vendor-avatar">
             <img ng-src="{{vendorDetails.vendor.photo.image_url}}">
