Changed login button to match Facebook style

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -10,7 +10,7 @@
                         <li><a href="/welcome/#customers" role="tab" data-toggle="tab">For Foodies</a></li>
                         <li><a href="/welcome/#vendors" role="tab" data-toggle="tab">For Farmers</a></li>
                         <!-- <li><a class="pointer welcome-sign-in" ng-click="signIn()">Sign In</a></li> -->
-                        <a ng-click="signIn()" class="btn btn-md beLocal-btn-filled" style="margin-left:10px;">Sign In</a>
+                        <a ng-click="signIn()" class="btn btn-md facebook-button" style="margin-left:10px;"><i class="fa fa-facebook-square"></i> Login</a>
                     </ul>
                 </div>
             </div>
