--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -17,7 +17,7 @@
                 <span ng-show="StateService.getCurrentUser().vendor.address.city != null && StateService.getCurrentUser().vendor.address.state != null">            
                     <span class="glyphicon glyphicon-map-marker"></span> {{vendorDetails.vendor.address.city}}, {{vendorDetails.vendor.address.state}} | 
                 </span>
-                <a href="http://{{StateService.getCurrentUser().vendor.webpage}}">Our Website</a> | Twitter | <a href="{{vendorDetails.vendor.facebook_url}}"> Facebook</a> | {{vendorDetails.vendor.phone}} |
+                <span ng-hide="StateService.getCurrentUser().vendor.webpage == null"><a href="http://{{StateService.getCurrentUser().vendor.webpage}}">Our Website</a> |</span><span ng-hide="vendorDetails.vendor.twitter_url == null"> <a href="{{vendorDetails.vendor.twitter_url">Twitter</a> |</span><span ng-hide="vendorDetails.vendor.facebook_url == null"><a ng-hide="vendorDetails.vendor.facebook_url == null" href="{{vendorDetails.vendor.facebook_url}}"> Facebook</a> |</span><span ng-hide="vendorDetails.vendor.phone == null"> {{vendorDetails.vendor.phone}} |</span>
             </span>
             <div data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
               <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(vendorDetails.vendor, 'vendor')" type="button" class="btn btn-default beLocal-btn-default">
