--- a/src/client/app/views/marketdetails.html
+++ b/src/client/app/views/marketdetails.html
@@ -7,6 +7,19 @@
     <div class="row vendor-profile-header">
         <div class="col-md-5 new-vendor-avatar">
             <img ng-src="{{marketDetails.photo.image_url}}">
+
+            <div class="col-sm-12 like-button-markets">
+                <div data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
+                  <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(marketDetails, 'market')" type="button" class="btn btn-default beLocal-btn-default">
+                    <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : marketDetails.is_liked}"></span>
+                    <span ng-hide="marketDetails.is_liked">Like</span>
+                    <span ng-show="marketDetails.is_liked">Unlike</span>
+                    <span class="like-container" ng-show="marketDetails.total_likes > 0">
+                      {{marketDetails.total_likes}}
+                    </span>
+                  </button>
+                </div>
+            </div>
         </div>
         <div class="vendor-header-content">
 
@@ -15,23 +28,15 @@
             </span>
             <span class="new-hr-heading-style">
                 <span class="glyphicon glyphicon-map-marker"></span> {{marketDetails.address.addr_line1}}, {{marketDetails.address.city}}, {{marketDetails.address.state}}
-                | <a>Our Website</a> | Twitter | Facebook |
+                | <a href="{{marketDetails.webpage}}">Our Website</a>
             </span>
-            <div data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
-              <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(marketDetails, 'market')" type="button" class="btn btn-default beLocal-btn-default">
-                <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : marketDetails.is_liked}"></span>
-                <span ng-hide="marketDetails.is_liked">Like</span>
-                <span ng-show="marketDetails.is_liked">Unlike</span>
-                <span class="like-container" ng-show="marketDetails.total_likes > 0">
-                  {{marketDetails.total_likes}}
-                </span>
-              </button>
+            <hr>    
+
+            <div class="markets-placeholder-text" ng-show="marketDetails.address.hours == 0">
+                <div class="no-bottom-margin small-header"><b>The {{marketDetails.name}} is closed for the season.</b></div>
             </div>
-            <hr>         
+
             <div class="store-hours">
-                <div class="vendor-placeholder-text" ng-show="marketDetails.address.hours == 0">
-                    <p class="no-bottom-margin">The {{marketDetails.name}} is closed for the season.</p>
-                </div>
 		        <ul style="margin-bottom:0px" class="list-inline store-hours">
 			        <li ng-repeat="day in marketDetails.address.hours">
 			            <b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}
