added contact-us page.

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -381,6 +381,12 @@ body {
   border-top: 3px solid #FFFFFF !important;
 }
 
+a.footerLink {
+  color:white;
+  margin-left:10px;
+  margin-right:10px;
+}
+
 @media (max-width: 598px) {
   .radio-inline-responsive {
     margin-left: 0px !important;
