Fixed ng-repeat for vendor cards.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -129,8 +129,8 @@
               <div class="bl-map" be-local-map vendors="vendors"></div>
             </div>
           </div>
-          <div class="col-sm-8" ng-repeat="vendor in vendors">
-          	   <vendor-card data="vendor"></vendor-card>
+          <div class="col-sm-8">
+          	   <vendor-card ng-repeat="vendor in vendors" data="vendor"></vendor-card>                            
           </div>
       </div>
     </div>
