Changed inactive alert behaviour
There is now a dismiss button for mobile. Refreshing the page will
still cause the alert to appear. Also changed some text on the welcome
screen.

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -62,7 +62,8 @@
                                     <br>
                                 </div>
                             </div>
-                            <br>
+                            <p class="getting-started-font">To register as a customer, sign up using Facebook by clicking the button below.</p>
+                            <br>                       
                             <a ng-click="signUpAsCustomer()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
                         </div>
                     </div>
@@ -96,6 +97,7 @@
                                     <br>
                                 </div>
                             </div>
+                            <p class="getting-started-font">To register as a vendor, sign up using Facebook by clicking the button below.</p>
                             <br>
                             <a ng-click="signUpAsVendor()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
                         </div>
