--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -1,4 +1,5 @@
-<div ng-show="isCurrentUserActive === false" class="alert alert-danger beLocal-alert" role="alert">
+<div ng-show="isCurrentUserActive === false && showInactiveAlert === true" class="alert alert-danger beLocal-alert" role="alert">
+  <button type="button" class="close" ng-click="hideInactiveAlert()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
   <span><strong>Your account is currently inactive!</strong> Until your account is activated, no one will be able to see your products or selling locations. After completing your profile, please email <a class="alert-link" href="mailto:{{StateService.getContactEmail()}}">{{StateService.getContactEmail()}}</a> to request activation!</span>
 </div>
 <div ng-show="showWarning" class="alert alert-warning alert-dismissible" role="alert">
