--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -133,7 +133,16 @@
         <h4 class="modal-title">No Valid Account</h4>
       </div>
       <div class="modal-body">
-        <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try creating one first!</p>
+        <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try creating one first by clicking one of the buttons below!</p>
+        <br>
+        <div style="text-align: center;">
+            <p class="getting-started-font">Sign Up as a Customer</p>
+            <a ng-click="signUpAsCustomerModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
+            <br><br>
+            <p class="getting-started-font">Sign Up as a Vendor</p>        
+            <a ng-click="signUpAsVendorModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
+            <br><br>
+        </div>
       </div>
       <div class="modal-footer no-top-margin">
         <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal">Close</button>
