--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -62,7 +62,7 @@
                                     <br>
                                 </div>
                             </div>
-                            <p class="getting-started-font">To register as a customer, sign up using Facebook by clicking the button below.</p>
+                            <p class="getting-started-font">To register as a foodie, sign up using Facebook by clicking the button below.</p>
                             <br>                       
                             <a ng-click="signUpAsCustomer()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
                         </div>
@@ -97,7 +97,7 @@
                                     <br>
                                 </div>
                             </div>
-                            <p class="getting-started-font">To register as a vendor, sign up using Facebook by clicking the button below.</p>
+                            <p class="getting-started-font">To register as a farmer or foodmaker, sign up using Facebook by clicking the button below.</p>
                             <br>
                             <a ng-click="signUpAsVendor()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
                         </div>
@@ -136,10 +136,10 @@
         <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try creating one first by clicking one of the buttons below!</p>
         <br>
         <div style="text-align: center;">
-            <p class="getting-started-font">Sign Up as a Customer</p>
+            <p class="getting-started-font">Sign Up as a Foodie</p>
             <a ng-click="signUpAsCustomerModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
             <br><br>
-            <p class="getting-started-font">Sign Up as a Vendor</p>        
+            <p class="getting-started-font">Sign Up as a Farmer</p>        
             <a ng-click="signUpAsVendorModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
             <br><br>
         </div>
