--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -200,7 +200,7 @@
                 <div class="row">
 
                 <!-- Display the locations name -->
-                    <div class="col-sm-2 hidden-xs vendor-product-image">
+                    <div class="col-sm-2 vendor-product-image">
                         <img ng-src="{{product.photo.image_url}}"/>
 
                     </div>
