Changed no valid account modal
The vertically stacked buttons looked strange, so I changed them to
inline buttons instead.

--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -327,3 +327,12 @@ body {
     font-size: 25px !important;
 }
 
+.fb-button-break {
+  display: none;
+}
+
+@media (max-width: 546px){
+  .fb-button-break {
+    display: inline;
+  }
+}
