--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -136,12 +136,11 @@
         <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try creating one first by clicking one of the buttons below!</p>
         <br>
         <div style="text-align: center;">
-            <p class="getting-started-font">Sign Up as a Foodie</p>
-            <a ng-click="signUpAsCustomerModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
-            <br><br>
-            <p class="getting-started-font">Sign Up as a Farmer</p>        
-            <a ng-click="signUpAsVendorModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up Using Facebook</a>
-            <br><br>
+            <a ng-click="signUpAsCustomerModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up As a Foodie</a>
+            <span class="fb-button-break"><br><br></span>
+            <span style="margin-left: 10px; margin-right: 10px;">or</span>
+            <span class="fb-button-break"><br><br></span>            
+            <a ng-click="signUpAsVendorModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up As a Farmer</a>
         </div>
       </div>
       <div class="modal-footer no-top-margin">
