--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -3,13 +3,15 @@
 <div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
 
 <!-- SELLER DETAILS -->
-<div class=" new-formatting-container customer-container">  
+<div class=" customer-container">  
     <div class="row vendor-profile-header">
-        <div class="col-md-5 new-vendor-avatar">
+
+        <div class="col-sm-5 vendor-avatar">
+            <div class="vendor-avatar-img">
             <img ng-src="{{vendorDetails.vendor.photo.image_url}}">
-        
+            
             <div class="col-xs-12 like-button-markets">
-                <div data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
+                <!-- <div data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
                   <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(vendorDetails.vendor, 'vendor')" type="button" class="btn btn-default beLocal-btn-default">
                     <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : vendorDetails.vendor.is_liked}"></span>
                     <span ng-hide="vendorDetails.vendor.is_liked">Like</span>
@@ -18,14 +20,27 @@
                       {{vendorDetails.vendor.total_likes}}
                     </span>
                   </button>
-                </div>
+                </div> -->
             </div>
-        </div>
-        <div class="vendor-header-content">
+        </div></div>
+
+        <div class="col-sm-7 vendor-header-content">
 
             <span class="new-vendor-name-style">
-                {{vendorDetails.vendor.company_name}}<br>
+                {{vendorDetails.vendor.company_name}}
             </span>
+            <span class="like-padding" data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
+              <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(vendorDetails.vendor, 'vendor')" type="button" class="btn btn-default beLocal-btn-default">
+                <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : vendorDetails.vendor.is_liked}"></span>
+                <span ng-hide="vendorDetails.vendor.is_liked">Like</span>
+                <span ng-show="vendorDetails.vendor.is_liked">Unlike</span>
+                <span class="" ng-show="vendorDetails.vendor.total_likes > 0">
+                  {{vendorDetails.vendor.total_likes}}
+                </span>
+              </button>
+            </span>
+
+            
             <span class="new-hr-heading-style">
                 <span ng-show="StateService.getCurrentUser().vendor.address.city != null && StateService.getCurrentUser().vendor.address.state != null">            
                     <span class="glyphicon glyphicon-map-marker"></span> {{vendorDetails.vendor.address.city}}, {{vendorDetails.vendor.address.state}} | 
@@ -44,7 +59,7 @@
     <hr>
     <div class="row">
         <div class="col-xs-12 new-hr-heading-style">
-            SELLING LOCATIONS FOR {{vendorDetails.vendor.company_name | uppercase}}
+            {{vendorDetails.markets.length + vendorDetails.selling_locations.length}} SELLING LOCATION<span ng-show="(vendorDetails.markets.length + vendorDetails.selling_locations.length) != 1">S</span> FOR {{vendorDetails.vendor.company_name | uppercase}}
         </div>
     </div>
     <hr>
@@ -57,7 +72,7 @@
         </div>    
         <div class="col-sm-8">
             <!-- NG-REPEAT FOR MARKETS -->
-            <div class="new-heading-style">
+            <div ng-show="vendorDetails.markets.length != 0" class="new-heading-style">
                     Market Locations
             </div>
             <!-- repeating for each location that seller has in the db -->
@@ -99,7 +114,7 @@
 
 
             <!-- NG-REPEAT FOR CUSTOM LOCATIONS -->
-            <div class="new-heading-style">
+            <div ng-show="vendorDetails.selling_locations.length != 0" class="new-heading-style">
                     Custom Locations
             </div>
             <!-- repeating for each location that seller has in the db -->
@@ -157,15 +172,11 @@
     <hr>
     <div class="row">
         <div class="col-xs-9 new-hr-heading-style">
-            {{vendorDetails.products.length}} PRODUCT<span ng-hide="vendorDetails.products.length === 1">S</span>
+            {{vendorDetails.products.length}} PRODUCT<span ng-hide="vendorDetails.products.length === 1">S</span> SOLD BY {{vendorDetails.vendor.company_name | uppercase}}
         </div>
     </div>
     <hr>
-
-
-    <div class="new-heading-style">
-            Sample Heading
-    </div>
+    <br>
 
 	<div class="row" id="masonry-container card-formatting">
 		<div class="container-for-cards">
