Added a pattern background image
This has been commented out until we can get more feedback on it
tomorrow.

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -356,12 +356,14 @@ html {
   min-height: 100%;
   /*background-color: #DDDDDD;*/
   background-color: #EEEEEE;
+  /*background-image: url('/images/pattern-new.png');*/
 }
 
 body {
   /* Margin bottom by footer height */
   margin-bottom: 40px;
   background-color: #EEEEEE;
+  /*background-image: url('/images/pattern-new.png');  */
   font-family: 'Roboto', sans-serif !important;
 }
 
